# home-assistant-eleksmaker-wfd1

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  animations.md  eleksmaker-home.example.yaml  hacs.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: backmerge.yml  pr.yml  release.yml
component/: 14_seg.cpp  7_seg.cpp  __init__.py  elekswfd.cpp  elekswfd.h
components/elekswfd/: 14_seg.cpp  __init__.py  displays.cpp  elekswfd.cpp  elekswfd.h  version.h
docs/images/: README.md
ha-card/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
ha-card/src/: eleksmaker-gif-editor.ts
src/: config.rs  ha.rs  index.ts  indexOld.js  logging.rs  main.rs  sensors.rs  tray.rs  tsconfig.json  tui_app.rs  typings.d.ts
